--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
         "host": "smtp.gmail.com",
         "port": 465,
         "auth": {
-            "user": "ipram93@gmail.com",
-            "pass": "9449249067Apple"
+            "user": "fds.bengaluru@gmail.com",
+            "pass": "DigitalSolutions@007"
         }
     }
 }
